geo-30.1.0 Доработан XUIClient, оптимизированы методы работы